<resources>
    <string name="app_name">To Do List</string>
    <string name="add_new_item">Add an item</string>

    <!--Radio button priority strings-->
    <string name="priority_options">Priority:</string>
    <string name="priority_high">high</string>
    <string name="priority_medium">medium</string>
    <string name="priority_low">low</string>

    <!--New/View item strings-->
    <string name="title_title">What do you want to do?</string>
    <string name="title_hint">Add a title for your to-do item here</string>
    <string name="description_title">To-do item details</string>
    <string name="description_hint">Add any details of this to-do item</string>
    <string name="details_title">To-do item status</string>
    <string name="new_item_header">Enter the details</string>
    <string name="view_item_header">Edit this item</string>
    <string name="checkbox">Item completed?</string>
    <string name="when_completed_title">Marked complete</string>
    <string name="when_completed_hint">Item not completed</string>
    <!--<string name="when_completed_insert"></string>-->

    <!--Button strings-->
    <string name="save_item">Save item</string>

    <!--Toast strings-->
    <string name="item_save">Saved</string>

    <!--Redundant strings?-->
    <string name="new_item_description">new item description</string>
    <string name="new_item">Enter and save your new list item here</string>




</resources>
